2005-07-16  KUBO Takehiro  <kubo@jiubao.org>
	* metaconfig: move "require 'base64'" and "require 'zlib'" to the
	  next line of "def get_zcontent(file)" for a ruby which doesn't
	  have 'zlib'.

2005-07-10  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/svcctx.c, lib/oci8.rb.in:
	  OCISvcCtx class is merged to OCI8 class. OCISvcCtx's public instance
	  methods become OCI8's private instance methods.
	* ext/oci8/depend: deleted.

2005-07-10  KUBO Takehiro  <kubo@jiubao.org>
	* Makefile, ext/oci8/extconf.rb: change version to 0.2.0-alpha.
	* ext/oci8/extconf.rb: add "ocidatetime.o" to $objs. add '--with-instant-client'
	  to Makefile when setup.rb is called with '--with-instant-client'.
	* ext/oci8/oci8.c: add oci8_base_class. fix bug in oci8_handle_initialize().
	  call Init_oci_datetime() in Init_oci8().
	* ext/oci8/oci8.h: add macros oci_lc, CHECK_STRING, TO_STRING_PTR and TO_STRING_LEN.
	* ext/oci8/ocinumber.c: add oci8_get_ocinumber().
	* ext/oci8/ocidatetime.c: add a new file for OCIDateTime.

2005-07-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/lob.c, ext/oci8/oci8.h, ext/oci8/oradate.c,
	   ext/oci8/oranumber.c, ext/oci8/rowid.c, ext/oci8/stmt.c:
	   use doubly linked list to free OCI8::BindType::*.
	* ext/oci8/extconf.rb, ext/oci8/oci8.c, ext/oci8/ocinumber.c: add OCINumber.

2005-07-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/*.c, ext/oci8/*.h: remove oci8_handle_t and oci8_base_class_t.
	  use oci8_base_t and oci8_bind_t instead of them. use oci8_base_class_t
	  and oci8_bind_class_t.
	* ext/oci8/descriptor.c, ext/oci8/handle.c: removed.
	* ext/oci8/rowid.c: added.

2005-07-01  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: try default $libs then get from demo_rdbms.mk.

2005-06-29  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: don't read sysliblist when instant client.

2005-06-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/const.c: delete unused constants.